@@ -35,6 +35,7 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2007-01-11 DP  1.8.0  Support for operators and op-classes in PostgreSQL 8.3.
 2007-01-10 DP  1.6.3  Fix an issue in the Query Tool export option that could
                       result in blank lines in the export file, per Mathias 
                       Durst and Mike.
